--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.575.0",
+    "mongoose": "^9.2.2",
     "next": "16.1.6",
     "nodemailer": "^8.0.1",
     "react": "19.2.3",
